k8s/flux-playground/traefik-minikube-vault-helm/infrastructure-core/image-automation/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: flux-webhook
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`flux-webhook.traefik.minikube`)
      services:
        - kind: Service
          name: webhook-receiver
          port: 80
